# sulfur_simulation

./: .gitignore  README.md  cspell.json  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: deploy.yml  test.yml
docs/source/: conf.py  index.rst
examples/: hexagonal_lennard_jones_potential.py  lennard_jones_potential.py  placholder_example.py  simulation.py  square_simulation_with_well.py  sulfur_nickel_simulation.py  uniform_square_simulation.py
phonon_simulation/: __init__.py
sulfur_simulation/: __init__.py  cache.py  hexagonal_hopping_calculator.py  hopping_calculator.py  isf.py  scattering_calculation.py  show_simulation.py  square_hopping_calculator.py  sulfur_data.py  sulfur_nickel_calculator.py  util.py
tests/: placeholder_test.py
